# nmealib

./: CMakeLists.txt  meson.build
include/nmea/: strtod.h
src/: gmath.c  strtod.c  tok.c
